add: фиксы по сделанному
