# backend/internal/handler/family/invite/api/api.go
@@ -1,0 +1,7 @@
+package api
+
+import "github.com/google/uuid"
+
+type CreateFamilyInviteRequest struct {
+	InviteeID uuid.UUID `json:"invitee_id" binding:"required"`
+}
